# python-app-capturer

./: .gitignore  README.md  README_JP.md  capture.py  merge.py  pyproject.toml
